<resources>
	<string name="app_name">Better Bus Poitiers</string>
	<string name="new_preset_btn">Nouveau Préréglage</string>
	<string name="find_other_station">Trouver une Station</string>
	<string name="search_hint">Rechercher...</string>
	<string name="refresh">Rafraichir</string>
	<string name="name_preset">Nom:</string>
	<string name="station_preset">Arrêt:</string>
	<string name="change_btn">Changer</string>
	<string name="hint_preset_name">Nom du préréglage</string>
	<string name="line_grid">Ligne:</string>
	<string name="favorite_txt">Favori:</string>
	<string name="save_txt">Sauvgarder</string>
	<string name="delete_btn">Supprimer</string>
	<string name="finish_btn">Finir</string>
	<string name="select_all">Tout Sélectionner</string>
	<string name="unselect_all">Tout Désélectionner</string>
	<string name="see_all_line_btn">Voir toutes les lignes</string>
	
	<string name="positon_list">Position dans la list: </string>
	<string name="up">Monter</string>
	<string name="down">Décendre</string>
	
	
	<string name="preset_saved">Préréglages Sauvgardés</string>
	<string name="preset_loaded">Préréglages Chargés</string>
	
	<string name="error_name">Erreur: Tu dois donner un nom à ton Préréglage.</string>
	<string name="error_station">Erreur: Tu dois sélectioner un arrêt de bus.</string>
	
	<string name="delete_msg">Es-tu sûr de vouloir supprimer ce préréglage?</string>
	
	
	<string name="yes">Oui</string>
	<string name="no">Non</string>
	<string name="appwidget_text">EXAMPLE</string>
	<string name="add_widget">Add widget</string>
	<string name="favorite_list_empty">Ajout des préréglage dans tes favories pour les voir apparètre ici dans</string>
	<string name="no_next_passage">Aucun prochain Passage n\'est prévue</string>
	<string name="see_fix_timetable">Voir les horraire fix</string>
	<string name="see_next_passage">Voire les prochain passage</string>
	<string name="no_passage">Aucun passage n\'est prévue se joure la</string>
	
	<string name="connection_error">Erreur aucun réseau n\'a été trouvé</string>
	<string name="go_back">Retour</string>
	<string name="preset_list_empty">La liste des préréglage est vide.\n(Créer s\'en un pour le voire apparaitre)</string>
	<string name="fix_timetable">Horraire Fix</string>
	<string name="next_passage_txt">Prochain Passage</string>
	<string name="timetable_list_empty">Aucun passage n\'est prévue se joure la</string>
	<string name="select_line">Selectioner une ligne...</string>
	<string name="date_hint">Date:</string>
	<string name="direction_hint">Direction:</string>
	<string name="go_to_map">Voire sur la carte</string>
	<string name="close">Fermer</string>
</resources>