<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:orientation="vertical">
	<TextView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:gravity="center"
			android:textSize="@dimen/textSize"
			android:id="@+id/station_name"
			android:text="Station Name"/>
	
	<Button
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/next_passage_btn"
			android:text="@string/next_passage_txt"/>
	
	<Button
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/fix_timetable_btn"
			android:text="@string/fix_timetable"/>
	
	<Button
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/see_in_map_btn"
			android:text="@string/go_to_map"/>
	
	<Button
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:id="@+id/close_btn"
			android:text="@string/close"/>
</LinearLayout>