<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".PresetEditionActivity"
		android:padding="10dp">
<!--	Name-->
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/name_preset"
			android:textSize="@dimen/textSize"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			android:id="@+id/name_preset_text_view"/>
	<EditText
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:hint="@string/hint_preset_name"
			android:textSize="20dp"
			android:layout_marginLeft="10dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintLeft_toRightOf="@id/name_preset_text_view"
			android:id="@+id/name_preset_edit_text"/>


<!--Station -->
	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/station_label"
			android:text="@string/station_preset"
			android:textSize="@dimen/textSize"
			app:layout_constraintTop_toBottomOf="@id/name_preset_edit_text"
			app:layout_constraintLeft_toLeftOf="parent"
			android:layout_marginTop="@dimen/top_margin"/>
	<TextView
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:textSize="@dimen/textSize"
			android:layout_marginLeft="10dp"
			android:id="@+id/station_name"
			app:layout_constraintTop_toTopOf="@+id/station_label"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintLeft_toRightOf="@id/station_label"/>


	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/change_station_btn"
			android:text="@string/change_btn"
			android:textSize="@dimen/btn_text_size"
			app:layout_constraintTop_toBottomOf="@id/station_label"
			/>
<!--Line-->
	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/line_text_view"
			app:layout_constraintTop_toBottomOf="@id/change_station_btn"
			android:layout_marginTop="@dimen/top_margin"
			android:textSize="@dimen/textSize"
			android:text="@string/line_grid"/>

	<GridView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/grid_view_line"
			android:orientation="vertical"
			android:numColumns="10"

			app:layout_constraintTop_toBottomOf="@id/line_text_view"

			/>

	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/change_line_btn"
			android:text="@string/change_btn"
			android:textSize="@dimen/btn_text_size"
			app:layout_constraintTop_toBottomOf="@id/grid_view_line"/>

<!--Favorite-->

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="@dimen/textSize"
			android:id="@+id/favorite_text_view"
			android:text="@string/favorite_txt"

			android:layout_marginTop="@dimen/top_margin"
			app:layout_constraintTop_toBottomOf="@id/change_line_btn"
			app:layout_constraintLeft_toLeftOf="parent"/>

	<CheckBox
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/favorite_check_box"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="@id/favorite_text_view"/>

<!--Button-->
	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/save_btn"
			android:text="@string/save_txt"
			android:textSize="@dimen/btn_text_size"

			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintRight_toRightOf="parent"/>

	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/delete_btn"
			android:text="@string/delete_btn"
			android:textSize="@dimen/btn_text_size"

			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>