<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:padding="@dimen/layout_padding"
		tools:context=".MainActivity">

	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/new_preset_btn"
			android:id="@+id/button_new"

			app:layout_constraintBottom_toTopOf="@id/button_other"/>

	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/find_other_station"
			android:id="@+id/button_other"

			app:layout_constraintBottom_toBottomOf="parent"/>

	<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintBottom_toTopOf="@id/button_new">
		
		<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="@string/preset_list_empty"
				android:textSize="@dimen/textSize"
				android:id="@+id/empty_list_preset_text"
				android:gravity="center"
				android:visibility="invisible"/>
		
		<ListView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:id="@+id/preset_list"
				tools:listitem="@layout/preset_item"/>
	</FrameLayout>
	


</androidx.constraintlayout.widget.ConstraintLayout>