<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:padding="@dimen/layout_padding"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/constraint_layout"
		tools:context=".NextPassageActivity">
	
	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/station_name"
			android:text="Station Name"
			android:textSize="40sp"
			android:gravity="center"
			app:layout_constraintTop_toTopOf="parent"/>
	
	<ListView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:id="@+id/next_passage_list"
			tools:listitem="@layout/next_passage_item"
			
			app:layout_constraintTop_toBottomOf="@+id/station_name"
			app:layout_constraintBottom_toTopOf="@id/see_all_btn"/>
	
	<TextView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:id="@+id/next_passage_list_empty_txt"
			android:text="@string/no_next_passage"
			android:textSize="@dimen/textSize"
			android:gravity="center"
			app:layout_constraintTop_toTopOf="@id/next_passage_list"
			app:layout_constraintBottom_toBottomOf="@id/next_passage_list"
			app:layout_constraintLeft_toLeftOf="@id/next_passage_list"
			app:layout_constraintRight_toRightOf="@id/next_passage_list"/>
	
	<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/refresh_btn"
			android:text="@string/refresh"
			
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toRightOf="@id/go_back_btn"
			app:layout_constraintRight_toRightOf="parent"/>
	
	<Button
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/go_back_btn"
			android:text="@string/go_back"
			
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintRight_toLeftOf="@id/refresh_btn"
			app:layout_constraintLeft_toLeftOf="parent"/>
	
	
	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/see_all_btn"
			android:text="@string/see_all_line_btn"

			app:layout_constraintBottom_toTopOf="@id/refresh_btn"/>
		
	<ProgressBar
			style="?android:attr/progressBarStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/progressBar2"
			android:visibility="visible"
			
			app:layout_constraintTop_toTopOf="@id/next_passage_list"
			app:layout_constraintBottom_toBottomOf="@id/next_passage_list"
			app:layout_constraintLeft_toLeftOf="@id/next_passage_list"
			app:layout_constraintRight_toRightOf="@id/next_passage_list"/>
	
	
</androidx.constraintlayout.widget.ConstraintLayout>