<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ActivityFixTimeTable">
	
	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/station_name"
			android:text="Station Name"
			android:textSize="40sp"
			android:gravity="center"
			app:layout_constraintTop_toTopOf="parent"
			/>
	
	
	<ListView
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:id="@+id/next_passage_list"
			tools:listitem="@layout/next_passage_item"
			
			app:layout_constraintTop_toBottomOf="@+id/station_name"
			app:layout_constraintBottom_toTopOf="@+id/direction_txt"/>
	
	<TextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:id="@+id/next_passage_list_empty_txt"
			android:text="@string/no_passage"
			android:textSize="@dimen/textSize"
			android:gravity="center"
			app:layout_constraintTop_toTopOf="@id/next_passage_list"
			app:layout_constraintBottom_toBottomOf="@id/next_passage_list"
			app:layout_constraintLeft_toLeftOf="@id/next_passage_list"
			app:layout_constraintRight_toRightOf="@id/next_passage_list"
			/>
	
	
	<TextView
			android:text="Direction"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/direction_txt"
			android:textSize="@dimen/textSize"
			android:layout_margin="5dp"
			app:layout_constraintBottom_toTopOf="@id/change_direction_btn"
			/>
	
	<Button
			android:text="@string/change_btn"
			android:textSize="@dimen/btn_text_size"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toTopOf="@id/date_input"
			android:layout_margin="5dp"
			android:id="@+id/change_direction_btn"/>
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="date"
			android:ems="10"
			android:id="@+id/date_input"
			android:hint="@string/date"
			android:layout_margin="5dp"
			app:layout_constraintBottom_toTopOf="@+id/see_next_passage"/>
	
	<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/see_next_passage"
			android:text="@string/see_next_passage"
			android:layout_margin="5dp"
			android:textSize="@dimen/btn_text_size"
			
			app:layout_constraintBottom_toBottomOf="parent"/>
	
	
	
	<ProgressBar
			style="?android:attr/progressBarStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/progressBar2"
			android:visibility="visible"
			
			app:layout_constraintTop_toTopOf="@id/next_passage_list"
			app:layout_constraintBottom_toBottomOf="@id/next_passage_list"
			app:layout_constraintLeft_toLeftOf="@id/next_passage_list"
			app:layout_constraintRight_toRightOf="@id/next_passage_list"/>

</androidx.constraintlayout.widget.ConstraintLayout>